--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -88,7 +88,7 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="http://kokolis2.web.engr.illinois.edu/" target="_blank">Apostolos Kokolis</a></strong>
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed the thesis proposal in Nov. 2021.
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
           </span>
