--- a/index.html
+++ b/index.html
@@ -392,6 +392,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+		        <p class="STYLE223">Sieve is selected for presentation at
+				 <a href="https://kccncna2021.sched.com/event/lV0S?iframe=no" target="_blank">KubeCon and CloudNativeCon</a>
 			<p class="STYLE223">Sam and Wenyu are spotlighted in
 				 <a href="https://cs.illinois.edu/news/researchers-in-software-engineering-share-expertise-to-deliver-excellence" target="_blank">CS news</a>
 		        <p class="STYLE223">YiFei is spotlighted by both
