--- a/pub.html
+++ b/pub.html
@@ -60,7 +60,22 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
-	  
+	<tr>
+		<td class="date"><font color="#083b89">ASPLOS'22</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Parallel Virtualized Memory Translation</strong> [<a href="pub/nested_cuckoo_pt.pdf" target="_blank">pdf</a> | <a href="pub/nested_cuckoo_pt_bib.txt" target="_blank">bib</a>]
+						  <br>
+						      Jovan Stojkovic, Dimitrios Skarlatos, Apostolos Kokolis, Tianyin Xu, and Josep Torrellas,
+						  <br>
+						  In Proceedings of the 27th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'22</b></font>), Lausanne, Switzerland, Feb. 2022.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+	
 	<tr>
 		<td class="date"><font color="#083b89">NDSS'22</font></td>
 			<td class="papers">
