--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -88,7 +88,9 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://hckuo.github.io" target="_blank">Hsuan-Chi (Austin) Kuo</a></strong>
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+            Attack Surface Reduction in Contemporary Operating Systems via Practical Kernel Debloating
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed the thesis proposal in Nov. 2021.
             <br>
             Advisor: <a href="https://sibin.github.io/sibin" target="_blank">Sibin Mohan</a>
           </span>
@@ -103,6 +105,8 @@ td.papers {
           <p></p>
             <span style="font-size: 12pt;">
             <strong><a href="http://kokolis2.web.engr.illinois.edu/" target="_blank">Apostolos Kokolis</a></strong>
+            <br>
+	    New Architectures for Non-Volatile Memory Technologies
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed the thesis proposal in Nov. 2021.
             <br>
