--- a/defects.html
+++ b/defects.html
@@ -71,7 +71,7 @@ div.Section1
   <tbody><tr>
     <td width="5%"><!--DWLayoutEmptyCell-->&nbsp;</td>
   	<td valign="top" width="90%">
-	The following list the issues that were found through our research projects and have been confirmed and/or fixed by the developers. 
+	The following lists bugs that were found through our research projects and have been confirmed and/or fixed by the developers. 
 		<p class="style2"><font face="Times New Roman">
 		<span class="type"><span style="font-style: normal;"><font size="4" color="#083b89">MySQL Database Server</font></span></span></font></p>
 		<blockquote>
