--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -162,7 +162,7 @@ td.papers {
             <br>
                 Scalable Resource Management for Internet-of-Things (IoT) Applications: Challenges, Methods and Tools
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in in Jan. 6, 2022.
             <br>
             Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
           </span>
@@ -180,7 +180,7 @@ td.papers {
             <br>
                 Machine Learning For Achieving Dependability in Mission-Critical Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in in Oct. 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in in Oct. 14, 2021.
             <br>
             Advisor: <a href="https://ece.illinois.edu/about/directory/faculty/rkiyer" target="_blank">Ravishankar K. Iyer</a>
           </span>
@@ -198,7 +198,7 @@ td.papers {
             <br>
             Foundations for Practical Network Verification
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in July 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in July 27, 2021.
             <br>
             Advisors: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a> and <a href="https://fsl.cs.illinois.edu/people/grigore-rosu/" target="_blank">Grigore Roşu</a>
           </span>
@@ -216,7 +216,7 @@ td.papers {
             <br>
             Software Testing in a Non-Deterministic World
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in June 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in June 24, 2021.
             <br>
             Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
           </span>
@@ -234,7 +234,7 @@ td.papers {
             <br>
             <a href="https://www.ideals.illinois.edu/handle/2142/109565" target="_blank">Rethinking Computer Architecture and Operating System Abstractions for Good &amp; Evil</a>﻿
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in August 2020.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in August 19, 2020.
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
 	    <br>
@@ -254,7 +254,7 @@ td.papers {
             <br>
             <a href="https://www.ideals.illinois.edu/handle/2142/108600" target="_blank">Satisfying Service Level Objectives in Stream Processing Systems</a>
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in July 2020.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in July 1, 2020.
             <br>
             Advisor: <a href="http://indy.cs.illinois.edu/" target="_blank">Indranil Gupta</a>
           </span>
@@ -273,7 +273,7 @@ td.papers {
               <a href="https://www.ideals.illinois.edu/handle/2142/109349" target="_blank">Utility-driven Optimization and Placement Framework for Visual IoT
               Analytics over Edge-cloud Environments</a>
               <br>
-              Department of Computer Science, University of Illinois at Urbana-Champaign, defended in May 2020.
+              Department of Computer Science, University of Illinois at Urbana-Champaign, defended in May 8, 2020.
               <br>
               Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
             </span>
@@ -291,7 +291,7 @@ td.papers {
               <br>
               <a href="https://www.ideals.illinois.edu/handle/2142/108300" target="_blank">Practical Verification of Network Planes</a>
               <br>
-              Department of Computer Science, University of Illinois at Urbana-Champaign, defended in March 2020.
+              Department of Computer Science, University of Illinois at Urbana-Champaign, defended in March 12, 2020.
               <br>
               Advisor: <a href="http://caesar.web.engr.illinois.edu/" target="_blank">Matthew Caesar</a>
             </span>
