--- a/index.html
+++ b/index.html
@@ -484,6 +484,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223">Yinfang Chen</p>
 				  <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a>)</p>
 				  <p class="STYLE223">Jinghao Jia (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>)</p>
+				  <p class="STYLE223">Xinyu Lian</p>
+				  <p class="STYLE223">Yicheng Lu</p>
 				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a></p>
 				  <p class="STYLE223"><a href="https://stuart0l.github.io/" target="_blank">Xuhao Luo</a></p>
 				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
