--- a/pub.html
+++ b/pub.html
@@ -61,6 +61,22 @@ td.papers {
   <!--DWLayoutTable-->
   <tbody>
 	<tr>
+		<td class="date"><font color="#083b89">EuroSys'22</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Verified Programs Can Party: Optimizing Kernel Extensions via Post-Verification In-Kernel Merging</strong> [<a href="pub/kfuse.pdf" target="_blank">pdf</a> | <a href="pub/kfuse_bib.txt" target="_blank">bib</a>]
+						  <br>
+						      Hsuan-Chi Kuo, Kai-Hsun Chen, Yicheng Lu, Dan Williams, Sibin Mohan, and Tianyin Xu,
+						  <br>
+						  In Proceedings of the 17th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'22</b></font>), Rennes, France, Apr. 2022.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+	
+	<tr>
 		<td class="date"><font color="#083b89">ASPLOS'22</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
