--- a/pub.html
+++ b/pub.html
@@ -66,7 +66,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Parallel Virtualized Memory Translation</strong> [<a href="pub/nested_cuckoo_pt.pdf" target="_blank">pdf</a> | <a href="pub/nested_cuckoo_pt_bib.txt" target="_blank">bib</a>]
+						  <strong>Parallel Virtualized Memory Translation with Nested Elastic Cuckoo Page Tables</strong> [<a href="pub/nested_cuckoo_pt.pdf" target="_blank">pdf</a> | <a href="pub/nested_cuckoo_pt_bib.txt" target="_blank">bib</a>]
 						  <br>
 						      Jovan Stojkovic, Dimitrios Skarlatos, Apostolos Kokolis, Tianyin Xu, and Josep Torrellas,
 						  <br>
