--- a/index.html
+++ b/index.html
@@ -339,6 +339,9 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
+						        <p class="STYLE223">Spring 2022 <a href="https://cs598txu-uiuc.github.io/spring22/" target="_blank">CS 523: Advanced Operating Systems</a></p>
+						        <p class="STYLE223">Spring 2022 <a href="https://systems-seminar-uiuc.github.io/spring22/" target="_blank">CS 591(SN): Systems Reading Group</a></p>
+						        <p class="STYLE223">Spring 2022 <a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
 						        <p class="STYLE223">Fall 2021 <a href="https://cs523-uiuc.github.io/fall21/" target="_blank">CS 523: Advanced Operating Systems</a></p>
 						        <p class="STYLE223">Fall 2021 <a href="https://systems-seminar-uiuc.github.io/fall21/" target="_blank">CS 591(DS): Systems Reading Group</a></p>
 						        <p class="STYLE223">Fall 2021 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
