--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@ ol { padding-left: 1.5em; }
 4108 Siebel Center (<a href="https://cs.illinois.edu/about/contact-us", target="_blank">direction</a>)
 tyxu at illinois dot edu || <a href="https://twitter.com/tianyin_xu", target="_blank">@tianyin_xu</a> (<a href="https://twitter.com/FSEconf/status/1412086096901644292", target="_blank">huh?</a>)
 
-Assistant: Madeleine Garvey
-mgarvey at illinois dot edu, (217) 300-6342</span>
+Assistant: Candice Steidinger
+steidin2 at illinois dot edu</span>
 </pre></TD>
 
   <TD width="417" rowspan="2" align=right vAlign=top><div align="left"></div></TD>
@@ -272,9 +272,9 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 		<TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
                 <b>$ echo <font color="#E84A27">"Join us on UIUC SysNet Slack channels: <a href="https://join.slack.com/t/uiuc-sysnet/signup", target="_blank">uiuc-sysnet.slack.com</a>."</font></b>
                 <br>
-		<b>$ echo <font color="#E84A27">"Please consider contributing to <a href="https://www.sigops.org/blog/", target="_blank">SIGOPS Blog</a>."</font></b>
+		<b>$ echo <font color="#E84A27">"Check out <a href="https://cs.illinois.edu/about/cs-cares", target="_blank">CS CARES</a> and reach out us, especially when you need help!"</font></b>
 		<br>
-		<b>$ echo <font color="#E84A27">"Please consider submitting your work to <a href="https://escholarship.org/uc/jsys/about", target="_blank">JSys</a> (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860">Why JSys?</a>)"</font></b>
+		<b>$ echo <font color="#E84A27">"Please consider contributing to <a href="https://www.sigops.org/blog/", target="_blank">SIGOPS Blog</a>."</font></b>
 		<br>
 		<b>$ echo <font color="#E84A27">"I co-organize <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC Systems Reading Group</a> and <a href="https://wiki.illinois.edu/wiki/display/SoftEng", target="_blank">Software Engineering Seminar</a>."</font></b>
 		<br>
@@ -284,8 +284,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 		<TD width="0.5%">&nbsp;</TD>
 
 
-                        <TR>
-						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=shortbio id="shortbio"></A></span><b>$ whoami</b></span></TD>
+                <TR>
+	            <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=shortbio id="shortbio"></A></span><b>$ whoami</b></span></TD>
                 </TR>
 		<TR>
                 <TD class=content_title>&nbsp;</TD>
@@ -303,6 +303,10 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
     </p>
 
     <p class="STYLE223">As a "<a href="http://phdcomics.com/comics/archive_print.php?comicid=1040" target="_blank">professor</a>", my meta-advice is to be serious and sincere to life and work. Winter is coming! Don't fight a fake war or someone else's war. Fight for what matters to the living or the dead.
+    </p>
+			
+    <p class="STYLE223">
+	    I am a part of <a href="https://cs.illinois.edu/about/cs-cares", target="_blank">CS CARES</a>. If you need help, please don't hesitate to reach out -- you'll never walk alone.
     </p>
 
     <p class="STYLE223"><sup><a name="ref1">1 </a></sup>I am constantly looking for such a job. Please contact me if you have or know one.</p>
