--- a/travel.html
+++ b/travel.html
@@ -373,7 +373,10 @@ div.Section1
 						     <li>Carmel-by-the-Sea, CA (2017) </li>
 						     <li>Cheyenne, WY (2018) </li>
                                                      <li>Chicago, IL (many) </li>
+						     <li>Cincinnati, OH (2021) </li>
 						     <li>Clarksville, TN (2021) </li>
+						     <li>Columbus, OH (2021) </li>
+						     <li>Cuyahoga, OH (2021) </li>
 						     <li>Custer, SD (2018) </li>
 						     <li>Denver, CO (2017) </li>
 						     <li>Des Moines, IA (2018) </li>
@@ -407,6 +410,7 @@ div.Section1
 						     <li>San Diego, CA (2011-2017) </li>
 						     <li>San Francisco, CA (many) </li>
 						     <li>San Jose, CA (many) </li>
+						     <li>Sandusky, OH (2021) </li>
 						     <li>Santa Barbara, CA (2017) </li>
 						     <li>Santa Clara, CA (many) </li>
 						     <li>Santa Cruz, CA (2017) </li>
