--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ steidin2 at illinois dot edu</span>
 		<TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
                 <b>$ echo <font color="#E84A27">"Join us on UIUC SysNet Slack channels: <a href="https://join.slack.com/t/uiuc-sysnet/signup", target="_blank">uiuc-sysnet.slack.com</a>."</font></b>
                 <br>
-		<b>$ echo <font color="#E84A27">"Check out <a href="https://cs.illinois.edu/about/cs-cares", target="_blank">CS CARES</a> and reach out us, especially when you need help!"</font></b>
+		<b>$ echo <font color="#E84A27">"Check out <a href="https://cs.illinois.edu/about/cs-cares", target="_blank">CS CARES</a> and reach out to us, especially when you need help!"</font></b>
 		<br>
 		<b>$ echo <font color="#E84A27">"Please consider contributing to <a href="https://www.sigops.org/blog/", target="_blank">SIGOPS Blog</a>."</font></b>
 		<br>
@@ -491,7 +491,7 @@ steidin2 at illinois dot edu</span>
 				  <p class="STYLE223">Yinfang Chen</p>
 				  <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a>)</p>
 				  <p class="STYLE223">Jinghao Jia (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>)</p>
-				  <p class="STYLE223">Xinyu Lian</p>
+				  <p class="STYLE223">Xinyu (Alex) Lian</p>
 				  <p class="STYLE223">Yicheng Lu</p>
 				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a></p>
 				  <p class="STYLE223"><a href="https://stuart0l.github.io/" target="_blank">Xuhao Luo</a></p>
