--- a/index.html
+++ b/index.html
@@ -445,7 +445,15 @@ steidin2 at illinois dot edu</span>
 		      <a href="https://escholarship.org/uc/jsys/about" target="_blank">Journal of Systems Research</a>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
-                  <p class="STYLE223">2021
+                  <p class="STYLE223">2023
+	            <a href="https://www.usenix.org/conference/nsdi23" target="_blank">NSDI</a>,
+          	  </p>
+		  <p class="STYLE223">2022
+	            <a href="https://www.systor.org/2022/" target="_blank">SYSTOR</a>,
+	            <a href="https://www.sigmetrics.org/sigmetrics2022/" target="_blank">Sigmetrics</a>,
+	            <a href="https://edge-sys.github.io/2022/" target="_blank">EdgeSys</a>,
+          	  </p>
+		  <p class="STYLE223">2021
 	            <a href="https://sigops.org/s/conferences/hotos/2021/" target="_blank">HotOS</a>,
 	            <a href="https://2021.eurosys.org/" target="_blank">EuroSys (sponsorship co-chair)</a>,
                     <a href="https://conf.researchr.org/home/icse-2021" target="_blank">ICSE</a>,
