--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -219,7 +219,9 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended in June 24, 2021.
             <br>
             Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
-          </span>
+            <br>
+	    <font color="#C40233"><b>ACM SIGSOFT Outstanding Doctoral Dissertation Award</b></font>
+	  </span>
         </div>
       </td>
   </tr>  
