--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -241,6 +241,8 @@ td.papers {
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
 	    <br>
 	    <font color="#C40233"><b>ACM SIGARCH - IEEE-CS TCCA Outstanding Dissertation Award</b></font>
+	    <br>
+	    <font color="#C40233"><b>David J. Kuck Outstanding PhD Thesis Award</b></font>
           </span>
         </div>
       </td>
