--- a/pub.html
+++ b/pub.html
@@ -60,6 +60,41 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
+	  
+	<tr>
+		<td class="date"><font color="#083b89">OSDI'22</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Automatic Reliability Testing For Cluster Management Controllers</strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <br>
+						      Xudong Sun, Wenqing Luo, Tyler Gu, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lalith Suresh, and Tianyin Xu,
+						  <br>
+						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
+					          <br>
+						  Code and data: <a href="https://github.com/sieve-project/sieve" target="_blank">sieve-project/sieve</a>
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+	  
+	<tr>
+		<td class="date"><font color="#083b89">OSDI'22</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Desirable Mobile Emulation through Graphics Projection</strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <br>
+						      Di Gao, Hao Lin, Zhenhua Li, Chengen Huang, Liangyi Gong, Feng Qian, Yunhao Liu, and Tianyin Xu,
+						  <br>
+						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+	  
 	<tr>
 		<td class="date"><font color="#083b89">EuroSys'22</font></td>
 			<td class="papers">
@@ -71,6 +106,8 @@ td.papers {
 						      Hsuan-Chi Kuo, Kai-Hsun Chen, Yicheng Lu, Dan Williams, Sibin Mohan, and Tianyin Xu,
 						  <br>
 						  In Proceedings of the 17th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'22</b></font>), Rennes, France, Apr. 2022.
+					          <br>
+						  Code and data: <a href="https://github.com/xlab-uiuc/eurosys-kfuse-artifact" target="_blank">kfuse</a>
 					  </span>
 				  </div>
 		  </td>
