--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ steidin2 at illinois dot edu</span>
 				  <p class="STYLE223">Yicheng Lu</p>
 				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a></p>
 				  <p class="STYLE223"><a href="https://stuart0l.github.io/" target="_blank">Xuhao Luo</a></p>
-				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
+				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a> (<font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font>)</p>
 				  <p class="STYLE223">Lilia Tang (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a>)</p>
                                   <p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a></p>
 				  <p class="STYLE223">Shuai Wang, co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
