--- a/pub.html
+++ b/pub.html
@@ -71,7 +71,7 @@ td.papers {
 						  <br>
 						      Xudong Sun, Wenqing Luo, Jiawei Tyler Gu, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lalith Suresh, and Tianyin Xu,
 						  <br>
-						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
+						  (To Appear) In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					          <br>
 						  Code and data: <a href="https://github.com/sieve-project/sieve" target="_blank">sieve-project/sieve</a>
 					  </span>
@@ -89,7 +89,7 @@ td.papers {
 						  <br>
 						      Di Gao, Hao Lin, Zhenhua Li, Chengen Huang, Liangyi Gong, Feng Qian, Yunhao Liu, and Tianyin Xu,
 						  <br>
-						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
+						  (To Appear) In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					  </span>
 				  </div>
 		  </td>
