--- a/index.html
+++ b/index.html
@@ -522,6 +522,7 @@ steidin2 at illinois dot edu</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
+				  <p class="STYLE223"><a href="https://rivalak.github.io/" target="_blank">Kele Huang</a>, Summer 2021 &rarr; Columbia University (PhD program)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/jianyanchen2aa899154/" target="_blank">Jack Chen</a>, MS 2021 (<a href="https://www.ideals.illinois.edu/handle/2142/113272" target="_blank">thesis</a>) &rarr; Trend Micro</p>
 				  <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei Zhu</a>, BS 2021 
 					  (<a href="https://ece.illinois.edu/admissions/why-ece/honors" target="_blank"><font color="#E84A27">Highest Honor</font></a>, 
