--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -97,24 +97,6 @@ td.papers {
         </div>
       </td>
   </tr>
-	  
-  <tr>
-    <td class="date"><font color="#083b89"></font></td>
-      <td class="papers">
-        <div align="justify" class="STYLE4">
-          <p></p>
-            <span style="font-size: 12pt;">
-            <strong><a href="http://kokolis2.web.engr.illinois.edu/" target="_blank">Apostolos Kokolis</a></strong>
-            <br>
-	    New Architectures for Non-Volatile Memory Technologies
-            <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed the thesis proposal in Nov. 2021.
-            <br>
-            Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
-          </span>
-        </div>
-      </td>
-  </tr>
 	 
   <tr>
     <td class="date"><font color="#083b89"></font></td>
@@ -147,6 +129,24 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Apr. 2021.
             <br>
             Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="https://tianyin.github.io/" target="_blank">Tianyin Xu</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="http://kokolis2.web.engr.illinois.edu/" target="_blank">Apostolos Kokolis</a></strong>
+            <br>
+	    New Architectures for Non-Volatile Memory Technologies
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in in Apr. 6, 2022.
+            <br>
+            Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
           </span>
         </div>
       </td>
