--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -126,7 +126,7 @@ td.papers {
             <br>
             Empowering Automated Mobile UI Testing In the Face of Real-world Complexities
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Apr. 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in Apr. 2021.
             <br>
             Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="https://tianyin.github.io/" target="_blank">Tianyin Xu</a>
           </span>
@@ -144,7 +144,7 @@ td.papers {
             <br>
 	    New Architectures for Non-Volatile Memory Technologies
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in in Apr. 6, 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Apr. 6, 2022.
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
           </span>
@@ -162,7 +162,7 @@ td.papers {
             <br>
                 Scalable Resource Management for Internet-of-Things (IoT) Applications: Challenges, Methods and Tools
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in in Jan. 6, 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Jan. 6, 2022.
             <br>
             Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
           </span>
@@ -180,7 +180,7 @@ td.papers {
             <br>
                 Machine Learning For Achieving Dependability in Mission-Critical Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in in Oct. 14, 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Oct. 14, 2021.
             <br>
             Advisor: <a href="https://ece.illinois.edu/about/directory/faculty/rkiyer" target="_blank">Ravishankar K. Iyer</a>
           </span>
