--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -79,24 +79,6 @@ td.papers {
       </font>
     </td>
   <tr>
-	  
-  <tr>
-    <td class="date"><font color="#083b89"></font></td>
-      <td class="papers">
-        <div align="justify" class="STYLE4">
-          <p></p>
-            <span style="font-size: 12pt;">
-            <strong><a href="https://hckuo.github.io" target="_blank">Hsuan-Chi (Austin) Kuo</a></strong>
-            <br>
-            Attack Surface Reduction in Contemporary Operating Systems via Practical Kernel Debloating
-	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed the thesis proposal in Nov. 2021.
-            <br>
-            Advisor: <a href="https://sibin.github.io/sibin" target="_blank">Sibin Mohan</a>
-          </span>
-        </div>
-      </td>
-  </tr>
 	 
   <tr>
     <td class="date"><font color="#083b89"></font></td>
@@ -129,6 +111,24 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in Apr. 2021.
             <br>
             Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="https://tianyin.github.io/" target="_blank">Tianyin Xu</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://hckuo.github.io" target="_blank">Hsuan-Chi (Austin) Kuo</a></strong>
+            <br>
+            Attack Surface Reduction in Contemporary Operating Systems via Practical Kernel Debloating
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Apr. 13, 2022.
+            <br>
+            Advisor: <a href="https://sibin.github.io/sibin" target="_blank">Sibin Mohan</a>
           </span>
         </div>
       </td>
