--- a/pub.html
+++ b/pub.html
@@ -90,6 +90,8 @@ td.papers {
 						      Di Gao, Hao Lin, Zhenhua Li, Chengen Huang, Liangyi Gong, Feng Qian, Yunhao Liu, and Tianyin Xu,
 						  <br>
 						  (To Appear) In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
+					          <br>
+						  Code: <a href="https://github.com/TrinityEmulator" target="_blank">TrinityEmulator</a>
 					  </span>
 				  </div>
 		  </td>
