--- a/pub.html
+++ b/pub.html
@@ -381,7 +381,7 @@ td.papers {
 						<br>
 						Code: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
 						<br>
-						<font color="#C40233"><b>Cozart is selected as a CACM Research Highlight.</b></font>
+						<font color="#C40233"><b>Cozart is selected as a CACM Research Highlight article: <a href="pub/cozart-cacm.pdf" target="_blank">pdf</a>.</b></font>
 					</span>
 				</div>
 		</td>
