--- a/pub.html
+++ b/pub.html
@@ -62,7 +62,7 @@ td.papers {
   <tbody>
 	
 	<tr>
-		<td class="date"><font color="#083b89">USENIX ATC'22</font></td>
+		<td class="date"><font color="#083b89">ATC'22</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
 					  <p></p>
