--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -122,7 +122,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://hckuo.github.io" target="_blank">Hsuan-Chi (Austin) Kuo</a></strong>
+            <strong><a href="https://hckuo.github.io" target="_blank">Hsuan-Chi (Austin) Kuo</a></strong>, Ph.D.
             <br>
             Attack Surface Reduction in Contemporary Operating Systems via Practical Kernel Debloating
 	    <br>
@@ -140,7 +140,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="http://kokolis2.web.engr.illinois.edu/" target="_blank">Apostolos Kokolis</a></strong>
+            <strong><a href="http://kokolis2.web.engr.illinois.edu/" target="_blank">Apostolos Kokolis</a></strong>, Ph.D.
             <br>
 	    New Architectures for Non-Volatile Memory Technologies
             <br>
@@ -158,7 +158,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://osl.cs.illinois.edu/members/sandur.html" target="_blank">Atul Sandur</a></strong>
+            <strong><a href="https://osl.cs.illinois.edu/members/sandur.html" target="_blank">Atul Sandur</a></strong>, Ph.D.
             <br>
                 Scalable Resource Management for Internet-of-Things (IoT) Applications: Challenges, Methods and Tools
             <br>
@@ -176,7 +176,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://saurabhjha1.github.io/" target="_blank">Saurabh Jha</a></strong>
+            <strong><a href="https://saurabhjha1.github.io/" target="_blank">Saurabh Jha</a></strong>, Ph.D.
             <br>
                 Machine Learning For Achieving Dependability in Mission-Critical Systems
             <br>
