--- a/index.html
+++ b/index.html
@@ -499,7 +499,6 @@ steidin2 at illinois dot edu</span>
 				  <p class="STYLE223">Chaitanya B. Bhandari</p>
 				  <!-- <p class="STYLE223">Madhuparna Bhowmik, co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p> -->
 				  <p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a></p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a></p>
 				  <p class="STYLE223">Yinfang Chen</p>
 				  <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a>)</p>
 				  <p class="STYLE223">Jinghao Jia (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>)</p>
@@ -520,6 +519,7 @@ steidin2 at illinois dot edu</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a>, M.Eng 2022 &rarr; Databricks &rarr; Anyscale</p>
 				  <p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS program)</p>
 				  <p class="STYLE223">Yicheng Lu, BE 2022 &rarr; UIUC (MS program)</p>    
 				  <p class="STYLE223"><a href="https://rivalak.github.io/" target="_blank">Kele Huang</a>, Summer 2021 &rarr; Columbia University (PhD program)</p>
