--- a/index.html
+++ b/index.html
@@ -449,7 +449,9 @@ steidin2 at illinois dot edu</span>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
                   <p class="STYLE223">2023
+		    OSDI,
 	            <a href="https://www.usenix.org/conference/nsdi23" target="_blank">NSDI</a>,
+		    Sigmetrics,
           	  </p>
 		  <p class="STYLE223">2022
 	            <a href="https://www.systor.org/2022/" target="_blank">SYSTOR</a>,
