--- a/index.html
+++ b/index.html
@@ -496,9 +496,9 @@ steidin2 at illinois dot edu</span>
                           <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ sudo cat gang</b></span></TD>
                           </TR>
                           <TR>
-                            <TD class=content_title>&nbsp;</TD>
+                            <TD class=content_title>&nbsp;</TD>  
                               <TD class=content width="96%">
-				  <p class="STYLE223">Chaitanya B. Bhandari</p>
+				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a></p>
 				  <!-- <p class="STYLE223">Madhuparna Bhowmik, co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p> -->
 				  <p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a></p>
 				  <p class="STYLE223">Yinfang Chen</p>
