--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ steidin2 at illinois dot edu</span>
 	            <a href="https://www.sigmetrics.org/sigmetrics2022/" target="_blank">Sigmetrics</a>,
 	            <a href="https://edge-sys.github.io/2022/" target="_blank">EdgeSys</a>,
 		    <a href="https://xxxy.gufe.edu.cn/chinasys22/index.html" target="_blank">ChinaSys</a>,
-		    Middleware,
+		    <a href="https://middleware-conf.github.io/2022/" target="_blank">Middleware</a>,
           	  </p>
 		  <p class="STYLE223">2021
 	            <a href="https://sigops.org/s/conferences/hotos/2021/" target="_blank">HotOS</a>,
