--- a/pub.html
+++ b/pub.html
@@ -67,9 +67,9 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Building Fault-Tolerant Distributed Systems with DepFast</strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <strong>DepFast: Orchestrating Code of Quorum Systems</strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
 						  <br>
-						      Xuhao Luo, Shuai Mu, and Tianyin Xu,
+						      Xuhao Luo, Weihai Shen, Shuai Mu, and Tianyin Xu,
 						  <br>
 						  (To Appear) In Proceedings of the 2022 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'22</b></font>), Carlsbad, CA, Jul. 2022.
 					  </span>
