--- a/pub.html
+++ b/pub.html
@@ -71,7 +71,7 @@ td.papers {
 						  <br>
 						      Xuhao Luo, Weihai Shen, Shuai Mu, and Tianyin Xu,
 						  <br>
-						  (To Appear) In Proceedings of the 2022 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'22</b></font>), Carlsbad, CA, Jul. 2022.
+						  In Proceedings of the 2022 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'22</b></font>), Carlsbad, CA, Jul. 2022.
 					  </span>
 				  </div>
 		  </td>
@@ -83,11 +83,11 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Automatic Reliability Testing for Cluster Management Controllers</strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <strong>Automatic Reliability Testing for Cluster Management Controllers</strong> [<a href="pub/sieve.pdf" target="_blank">pdf</a> | <a href="pub/sieve_bib.txt" target="_blank">bib</a>]
 						  <br>
 						      Xudong Sun, Wenqing Luo, Jiawei Tyler Gu, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lalith Suresh, and Tianyin Xu,
 						  <br>
-						  (To Appear) In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
+						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					          <br>
 						  Code and data: <a href="https://github.com/sieve-project/sieve" target="_blank">sieve-project/sieve</a>
 					  </span>
@@ -101,11 +101,11 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Trinity: High-Performance Mobile Emulation through Graphics Projection</strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <strong>Trinity: High-Performance Mobile Emulation through Graphics Projection</strong> [<a href="pub/trinity.pdf" target="_blank">pdf</a> | <a href="pub/trinity_bib.txt" target="_blank">bib</a>]
 						  <br>
 						      Di Gao, Hao Lin, Zhenhua Li, Chengen Huang, Liangyi Gong, Feng Qian, Yunhao Liu, and Tianyin Xu,
 						  <br>
-						  (To Appear) In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
+						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					          <br>
 						  Code: <a href="https://github.com/TrinityEmulator" target="_blank">TrinityEmulator</a>
 					  </span>
@@ -245,7 +245,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Reasoning about modern datacenter infrastructures using partial histories </strong> [<a href="pub/sieve.pdf" target="_blank">pdf</a> | <a href="pub/sieve_bib.txt" target="_blank">bib</a>]
+						  <strong>Reasoning about modern datacenter infrastructures using partial histories </strong> [<a href="pub/partial_history.pdf" target="_blank">pdf</a> | <a href="pub/partial_history_bib.txt" target="_blank">bib</a>]
 						  <br>
 						      Xudong Sun, Lalith Suresh, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lilia Tang, and Tianyin Xu
 						  <br>
