--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@ steidin2 at illinois dot edu</span>
 	            <a href="https://edge-sys.github.io/2022/" target="_blank">EdgeSys</a>,
 		    <a href="https://xxxy.gufe.edu.cn/chinasys22/index.html" target="_blank">ChinaSys</a>,
 		    <a href="https://middleware-conf.github.io/2022/" target="_blank">Middleware</a>,
+		    <a href="https://2022.esec-fse.org/track/fse-2022-industry" target="_blank">ESEC/FSE Industry Track</a>,
           	  </p>
 		  <p class="STYLE223">2021
 	            <a href="https://sigops.org/s/conferences/hotos/2021/" target="_blank">HotOS</a>,
