--- a/pub.html
+++ b/pub.html
@@ -67,7 +67,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>DepFast: Orchestrating Code of Quorum Systems</strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <strong>DepFast: Orchestrating Code of Quorum Systems</strong> [<a href="pub/depfast-atc.pdf" target="_blank">pdf</a> | <a href="pub/depfast-atc_bib.txt" target="_blank">bib</a>]
 						  <br>
 						      Xuhao Luo, Weihai Shen, Shuai Mu, and Tianyin Xu,
 						  <br>
@@ -262,7 +262,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Fail-slow fault tolerance needs programming support </strong> [<a href="pub/depfast.pdf" target="_blank">pdf</a> | <a href="pub/depfast_bib.txt" target="_blank">bib</a>]
+						  <strong>Fail-slow fault tolerance needs programming support </strong> [<a href="pub/depfast-hotos.pdf" target="_blank">pdf</a> | <a href="pub/depfast-hotos_bib.txt" target="_blank">bib</a>]
 						  <br>
 						    Andrew Yoo, Yuanli Wang, Ritesh Sinha, Shuai Mu, and Tianyin Xu
 						  <br>
